--- a/introduction_style.css
+++ b/introduction_style.css
@@ -1,10 +1,11 @@
 html{
     width: 100%;
-    height: 100%;
+    height: 150%;
+    max-height: 300%;
 }
 #header{
     display: flex;
-    height: 50px;
+    height: 5%;
     background-color: aquamarine;
     flex-wrap: wrap;
     align-items: center;
@@ -25,6 +26,7 @@ body{
 }
 .index{
     flex-grow: 4;
+    font-size: 5vmin;
 }
 #introduction{
     display: grid;
@@ -32,7 +34,7 @@ body{
     width: 100%;
     height: 100%;
     grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 2fr [row_2] 5fr [row_3] 2.5fr [row_4];
+    grid-template-rows: [row_1] 1fr [row_2] 1fr [row_3] 2fr [row_4];
 }
 #introduction_content_1{
     display: flex;
@@ -45,7 +47,7 @@ body{
     grid-row-end: 2;
     justify-content: center;
     align-items: center;
-    font-size: 30px;
+    font-size: 5vmin;
 }
 #introduction_content_2{
     width: 100%;
@@ -54,7 +56,7 @@ body{
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
-    font-size: 20px;
+    font-size: 2.5vmin;
 }
 .paragraph{
     text-indent: 2em;
