--- a/purchase_style.css
+++ b/purchase_style.css
@@ -1,6 +1,11 @@
+html{
+    width: 100%;
+    height: 150%;
+    max-height: 300%;
+}
 #header{
     display: flex;
-    height: 50px;
+    height: 5%;
     background-color: aquamarine;
     flex-wrap: wrap;
     align-items: center;
@@ -19,6 +24,7 @@ body{
 }
 .index{
     flex-grow: 4;
+    font-size: 5vmin;
 }
 
 #purchase{
@@ -26,7 +32,7 @@ body{
     height: 100%;
     display: grid;
     grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 2fr [row_2] 5fr [row_3] 2.5fr [row_4];
+    grid-template-rows: [row_1] 1fr [row_2] 5fr [row_3] 1fr [row_4];
 }
 form{
     grid-column-start: 2;
