--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 html{
     width: 100%;
-    height: 100%;
+    height: 150%;
+    max-height: 200%;
 }
 #header{
     display: flex;
-    height: 50px;
+    height: 5%;
     background-color: aquamarine;
     flex-wrap: wrap;
     align-items: center;
@@ -30,6 +31,7 @@ body{
 }
 .index{
     flex-grow: 4;
+    font-size: 5vmin;
 }
 
 #about_us{
@@ -38,7 +40,7 @@ body{
     width: 100%;
     height: 100%;
     grid-template-columns: [column_1] 1fr [column_2] 3fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 2fr [row_2] 8fr [row_3] 2fr [row_4] 2fr [row_5] 5fr [row_6];
+    grid-template-rows: [row_1] 1fr [row_2] 3fr [row_3] 1fr [row_4] 1fr [row_5] 1fr [row_6];
     background-color: rgba(255, 255, 255, 0.5);
 }
 #about_us_content_1{
@@ -49,7 +51,7 @@ body{
     grid-row-end: 2;
     text-align: center;
     /*background-color: green;*/
-    font-size: 30px;
+    font-size: 10vmin;
     justify-content: center;
     align-items: center;
     height: 100%;
@@ -137,7 +139,7 @@ body{
     /*background-color: red;*/
     justify-content: center;
     align-items: center;
-    font-size: 20;
+    font-size: 3vmin;
     height: 100%;
     width: 100%;
 }
@@ -157,10 +159,10 @@ body{
     background-color: gray;
     border: 1px;
     border-radius: 10px;
-    width: 100px;
-    height: 50px;
+    width: 20vmin;
+    height: 10vmin;
     text-align: center;
-    font-size: 20;
+    font-size: 3vmin;
 }
 .bottom{
     grid-column-start: 1;
