--- a/share_style.css
+++ b/share_style.css
@@ -1,7 +1,7 @@
 html{
     width: 100%;
     height: 150%;
-    max-height: 300%;
+    max-height: 200%;
 }
 #header{
     display: flex;
@@ -12,11 +12,13 @@ html{
     align-content: center;
     position: sticky;
     top: 0;
+    z-index: 1;
+    width: 100%;
 }
 body{
+    margin: 0;
     width: 100%;
     height: 100%;
-    margin: 0;
 }
 .icon{
     display: flex;
@@ -28,48 +30,45 @@ body{
     flex-grow: 4;
     font-size: 5vmin;
 }
-#introduction{
+
+#share{
+    width: 100%;
+    height: 100%;
     display: grid;
-    /*background-color: gray;*/
-    width: 100%;
-    height: 100%;
     grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 1fr [row_2] 5fr [row_3] 1fr [row_4];
+    grid-template-rows: [row_1] 6fr [row_2] 1fr [row_3];
+    /*background-color: red;*/
 }
-#introduction_content_1{
-    display: flex;
+#media{
     width: 100%;
     height: 100%;
-    /*background-color: green;*/
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
+    display: grid;
+    grid-template-rows: [row_1] 1fr [row_2] 1fr [row_3] 1fr [row_4];
+    /*background-color: green;*/
     justify-content: center;
+    justify-items: center;
     align-items: center;
-    font-size: 5vmin;
 }
-#introduction_content_2{
-    width: 100%;
-    height: 100%;
-    grid-column-start: 2;
-    grid-column-end: 3;
+#video1{
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+#video2{
     grid-row-start: 2;
     grid-row-end: 3;
-    font-size: 2.5vmin;
 }
-.paragraph{
-    text-indent: 2em;
-    margin-left: 2em;
-}
-.bottom{
-    width: 100%;
-    height: 100%;
-    background-color: gray;
+#bottom{
     grid-column-start: 1;
     grid-column-end: 4;
-    grid-row-start: 3;
-    grid-row-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    background-color: gray;
+    height: 100%;
+    width: 100%;
 }
 #bottom_about{
     color: lightblue;
