--- a/introduction_style.css
+++ b/introduction_style.css
@@ -1,11 +1,11 @@
-html{
+/* html{
     width: 100%;
     height: 200%;
     max-height: 300%;
-}
+} */
 #header{
     display: flex;
-    height: 5%;
+    height: 10vh;
     background-color: aquamarine;
     flex-wrap: wrap;
     align-items: center;
@@ -15,7 +15,6 @@ html{
 }
 body{
     width: 100%;
-    height: 100%;
     margin: 0;
 }
 .icon{
@@ -37,14 +36,13 @@ body{
     display: grid;
     /*background-color: gray;*/
     width: 100%;
-    height: 100%;
+    height: 200vh;
     grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 1fr [row_2] 5fr [row_3] 1fr [row_4];
+    grid-template-rows: [row_1] 1fr [row_2] 5fr [row_3] 30vh [row_4];
 }
 #introduction_content_1{
     display: flex;
     width: 100%;
-    height: 100%;
     /*background-color: green;*/
     grid-column-start: 2;
     grid-column-end: 3;
@@ -56,7 +54,6 @@ body{
 }
 #introduction_content_2{
     width: 100%;
-    height: 100%;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
@@ -68,8 +65,10 @@ body{
     margin-left: 2em;
 }
 .bottom{
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 8fr [column_3];
+    grid-template-rows: [row_1] 1fr [row_2] 5fr [row_3];
     width: 100%;
-    height: 100%;
     background-color: gray;
     grid-column-start: 1;
     grid-column-end: 4;
@@ -78,13 +77,31 @@ body{
 }
 #bottom_about{
     color: lightblue;
-    padding-top: 10px;
-    padding-left: 10px;
+    margin-top: 1vmin;
+    margin-left: 1vmin;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
     font-size: 5vmin;
 }
 #bottom_content{
     color: blue;
-    font-size: 3vmin;
-    padding-top: 10px;
-    padding-left: 10px;
+    margin-top: 1vmin;
+    margin-left: 1vmin;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    font-size: 2.5vmin;
+}
+#gfa_logo{
+    color: blue;
+    margin-top: 2vmin;
+    margin-left: 2vmin;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    background-color: white;
 }
