--- a/purchase_style.css
+++ b/purchase_style.css
@@ -1,11 +1,11 @@
-html{
+/* html{
     width: 100%;
     height: 200%;
     max-height: 300%;
-}
+} */
 #header{
     display: flex;
-    height: 5%;
+    height: 10vh;
     background-color: aquamarine;
     flex-wrap: wrap;
     align-items: center;
@@ -16,7 +16,6 @@ html{
 body{
     margin: 0;
     width: 100%;
-    height: 100%;
 }
 .icon{
     display: flex;
@@ -36,13 +35,21 @@ body{
 
 #purchase{
     width: 100%;
-    height: 100%;
+    height: 200vh;
     display: grid;
     grid-template-columns: [column_1] 1fr [column_2] 10fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 1fr [row_2] 3fr [row_3] 1fr [row_4];
-    justify-content: center;
-    align-items: center;
+    grid-template-rows: [row_1] 1fr [row_2] 5fr [row_3] 30vh [row_4];
+    /* justify-content: center;
+    align-items: center; */
     /*background-color: red;*/
+}
+#form_title{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+    font-size: 10vmin;
 }
 form{
     grid-column-start: 2;
@@ -52,17 +59,8 @@ form{
     display: grid;
     /*background-color: red;*/
     width: 100%;
-    height: 100%;
     grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
     grid-template-rows: [row_1] 2fr [row_2] 1fr [row_3] 1fr [row_4] 1fr [row_5] 1fr [row_6] 1fr [row_7] 1fr [row_8] 1fr [row_9] 1fr [row_10] 1fr [row_11];
-}
-#form_title{
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    text-align: center;
-    font-size: 10vmin;
 }
 #email{
     grid-column-start: 1;
@@ -446,8 +444,11 @@ form{
     width: 50px;
 }
 .bottom{
-    height: 100%;
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 8fr [column_3];
+    grid-template-rows: [row_1] 1fr [row_2] 5fr [row_3];
     width: 100%;
+    /* height: 100%; */
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 3;
@@ -456,13 +457,31 @@ form{
 }
 #bottom_about{
     color: lightblue;
-    padding-top: 10px;
-    padding-left: 10px;
+    margin-top: 1vmin;
+    margin-left: 1vmin;
     font-size: 5vmin;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 #bottom_content{
     color: blue;
     font-size: 2.5vmin;
-    padding-top: 10px;
-    padding-left: 10px;
+    margin-top: 1vmin;
+    margin-left: 1vmin;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+#gfa_logo{
+    color: blue;
+    margin-top: 2vmin;
+    margin-left: 2vmin;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    background-color: white;
 }
