--- a/share_style.css
+++ b/share_style.css
@@ -1,11 +1,11 @@
-html{
+/* html{
     width: 100%;
     height: 200%;
     max-height: 300%;
-}
+} */
 #header{
     display: flex;
-    height: 5%;
+    height: 10vh;
     background-color: aquamarine;
     flex-wrap: wrap;
     align-items: center;
@@ -18,7 +18,6 @@ html{
 body{
     margin: 0;
     width: 100%;
-    height: 100%;
 }
 .icon{
     display: flex;
@@ -38,15 +37,14 @@ body{
 
 #share{
     width: 100%;
-    height: 100%;
     display: grid;
     grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 6fr [row_2] 1fr [row_3];
+    grid-template-rows: [row_1] 6fr [row_2] 30vh [row_3];
     /*background-color: red;*/
 }
 #media{
     width: 100%;
-    height: 100%;
+    height: 200vh;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
@@ -58,32 +56,54 @@ body{
     justify-items: center;
     align-items: center;
 }
-#video1{
+#video_1{
     grid-row-start: 1;
     grid-row-end: 2;
+    margin-top: 100px;
 }
-#video2{
+#video_2{
     grid-row-start: 2;
     grid-row-end: 3;
+    margin-top: 100px;
 }
 #bottom{
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 8fr [column_3];
+    grid-template-rows: [row_1] 1fr [row_2] 5fr [row_3];
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
     background-color: gray;
-    height: 100%;
     width: 100%;
 }
 #bottom_about{
     color: lightblue;
-    padding-top: 10px;
-    padding-left: 10px;
+    margin-top: 1vmin;
+    margin-left: 1vmin;
     font-size: 5vmin;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 #bottom_content{
     color: blue;
-    font-size: 3vmin;
-    padding-top: 10px;
-    padding-left: 10px;
+    font-size: 2.5vmin;
+    margin-top: 1vmin;
+    margin-left: 1vmin;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+#gfa_logo{
+    color: blue;
+    margin-top: 2vmin;
+    margin-left: 2vmin;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    background-color: white;
 }
