--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-html{
+/* html{
     width: 100%;
     height: 200%;
     max-height: 300%;
-}
+} */
 #header{
     display: flex;
-    height: 5%;
+    height: 10vh;
     background-color: aquamarine;
     flex-wrap: wrap;
     align-items: center;
@@ -20,8 +20,6 @@ body{
     background-position: center;
     background-size: cover;
     margin: 0;
-    width: 100%;
-    height: 100%;
 }
 .icon{
     display: flex;
@@ -41,11 +39,11 @@ body{
 
 #about_us{
     display: grid;
-    /* background-color: red; */
+    /* background-color: red;  */
     width: 100%;
-    height: 100%;
+    height: 200vh;
     grid-template-columns: [column_1] 1fr [column_2] 3fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 1fr [row_2] 3fr [row_3] 1fr [row_4] 1fr [row_5] 1fr [row_6];
+    grid-template-rows: [row_1] 1fr [row_2] 3fr [row_3] 1fr [row_4] 1fr [row_5] 30vh [row_6];
     background-color: rgba(255, 255, 255, 0.5);
 }
 #about_us_content_1{
@@ -59,7 +57,6 @@ body{
     font-size: 10vmin;
     justify-content: center;
     align-items: center;
-    height: 100%;
     width: 100%;
 }
 #about_us_content_2{
@@ -73,7 +70,6 @@ body{
     justify-content: center;
     align-items: center;
     position: relative;
-    height: 100%;
     width: 100%;
     object-fit: contain;
 }
@@ -145,7 +141,6 @@ body{
     justify-content: center;
     align-items: center;
     font-size: 3vmin;
-    height: 100%;
     width: 100%;
 }
 .paragraph{
@@ -170,23 +165,46 @@ body{
     font-size: 3vmin;
 }
 .bottom{
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 8fr [column_3];
+    grid-template-rows: [row_1] 1fr [row_2] 5fr [row_3];
+    width: 100%;
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 5;
     grid-row-end: 6;
     background-color: gray;
-    height: 100%;
-    width: 100%;
 }
 #bottom_about{
     color: lightblue;
-    padding-top: 10px;
-    padding-left: 10px;
+    margin-top: 1vmin;
+    margin-left: 1vmin;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
     font-size: 5vmin;
 }
 #bottom_content{
     color: blue;
-    font-size: 3vmin;
-    padding-top: 10px;
-    padding-left: 10px;
+    margin-top: 1vmin;
+    margin-left: 1vmin;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    font-size: 2.5vmin;
 }
+#gfa_logo{
+    color: blue;
+    margin-top: 2vmin;
+    margin-left: 2vmin;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    background-color: white;
+}
+/* #friend_station_link img{
+    height: 50px;
+} */
